[package]
name = "bbox-state-watcher"
version = "0.1.0"
authors = ["LightDiscord <root@arnaud.sh>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
failure = "0.1"
reqwest = "0.10"
tokio = { version = "0.2", features = ["macros", "time"] }
